# Triangles

./: .gitmodules  BasicTriangle.cpp  BasicTriangle.h  BasicTriangleMain.cpp  BasicUniform.cpp  BasicUniform.h  CMakeLists.txt  Common.cpp  Common.h  Cube.cpp  Cube.h  Icosahedron.cpp  Icosahedron.h  IcosahedronSample.cpp  IcosahedronSample.h  IndexedQuad.cpp  IndexedQuad.h  IndexedQuadMain.cpp  IndexedVertexBuffer.h  MainBasicTriangle.cpp  MainBasicUniform.cpp  NOTICE  Noise.cpp  Noise.h  Noise2D.cpp  Noise2D.h  Objects.cpp  Objects.h  PositionColorTextureVertex.cpp  PositionColorTextureVertex.h  PositionColorVertex.cpp  PositionColorVertex.h  README.md  ShaderLoader.cpp  ShaderLoader.h  SphereUV.cpp  SphereUV.h  Surface.cpp  Surface.h  TexturedQuad.cpp  (+12 more)
shaders/: CMakeLists.txt  basic_triangle.hlsl  basic_triangle_uniform.hlsl  position_color_projection.hlsl  textured_quad.hlsl
